--- a/styles.scss
+++ b/styles.scss
@@ -7,6 +7,11 @@
     src: url('src/fonts/Nova_Square/NovaSquare-Regular.ttf') format('truetype');
 }
 
+@font-face {
+    font-family: "Kanit";
+    src: url('src/fonts/Kanit/Kanit-MediumItalic.ttf') format('truetype');
+}
+
 @mixin flexCenter {
     display: flex;
     justify-content: center;
@@ -38,6 +43,8 @@ body {
     font-size: 1.2em;
     text-align: center;
     background-color: $color1;
+    font-family: 'Kanit', sans-serif;
+
 
 }
 
