--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@
   font-family: "Kanit";
   src: url("src/fonts/Kanit/Kanit-MediumItalic.ttf") format("truetype");
 }
+@font-face {
+  font-family: "DancingScript";
+  src: url(src/fonts/Dancing_Script/DancingScript-Bold.ttf) format("truetype");
+}
 @keyframes colorScroll {
   0% {
     background-position: left bottom;
@@ -110,13 +114,13 @@ header nav div:hover a {
 #divTitle #presentation h1 {
   background: linear-gradient(to right, rgb(16, 233, 86), white, rgb(16, 233, 86), white, rgb(16, 233, 86));
   background-size: 200% 100%;
-  animation: colorScroll 2.5s linear infinite;
+  animation: colorScroll 2s linear infinite;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   margin-top: 0;
-  font-size: 3em;
-  font-family: "Pacifico", cursive;
+  font-size: 6em;
+  font-family: "DancingScript", cursive, sans-serif;
 }
 
 main {
