--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   cursor: url(src/cursor.png) 6 1, pointer;
 }
@@ -102,7 +103,7 @@ header nav div:hover a {
   font-family: "NovaSquare", sans-serif;
 }
 #divTitle img {
-  width: 120%;
+  width: 96%;
 }
 #divTitle #presentation {
   position: absolute;
@@ -135,6 +136,14 @@ main {
 main #about {
   display: flex;
   align-items: center;
+}
+main #about img[alt="Hé non! Tu veux voir ma tête ? Appelles-moi 💖"] {
+  color: initial;
+  -webkit-text-fill-color: initial;
+}
+main #about span {
+  color: initial;
+  -webkit-text-fill-color: initial;
 }
 main #about #description {
   display: flex;
