--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   cursor: url(src/cursor.png) 6 1, pointer;
 }
@@ -121,7 +120,8 @@ header nav div:hover a {
   background-clip: text;
   margin-top: 0;
   font-size: 6em;
-  font-family: "DancingScript", cursive, sans-serif;
+  font-family: "DancingScript", cursive;
+  font-weight: 100;
 }
 
 main {
@@ -136,10 +136,6 @@ main {
 main #about {
   display: flex;
   align-items: center;
-}
-main #about img[alt="Hé non! Tu veux voir ma tête ? Appelles-moi 💖"] {
-  color: initial;
-  -webkit-text-fill-color: initial;
 }
 main #about span {
   color: initial;
