--- a/styles.css
+++ b/styles.css
@@ -180,12 +180,17 @@ main #tools p {
   width: 100%;
   margin: 0 0 25px 0;
 }
+main #tools #competencesDiv {
+  display: flex;
+  flex-wrap: wrap;
+}
 main #tools #competencesDiv div {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 40px;
   margin: 4px 0;
+  width: 50%;
 }
 main #tools #competencesDiv div .pValue {
   display: none;
@@ -205,6 +210,7 @@ main #tools #competencesDiv div .progressBarFix {
   height: 12px;
   background-color: rgb(125, 125, 125);
   border-radius: 6px;
+  display: none;
 }
 main #tools #competencesDiv div .progressBar {
   background-color: #4CAF50;
