font size little

--- a/styles.scss
+++ b/styles.scss
@@ -145,7 +145,7 @@ header {
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            margin-top: 0;
+            margin: 0;
             font-size: 6em;
             font-family: 'DancingScript', cursive;
             font-weight: 100;
@@ -373,7 +373,7 @@ footer {
 
 @media screen and (max-width: 800px) {
     * {
-        font-size: 100%;
+        font-size: 80%;
     }
 
     header {
@@ -381,6 +381,10 @@ footer {
             align-items: flex-end;
             width: 75%;
         }
+    }
+
+    h1 {
+        font-size: 50%;
     }
 
     #about {
