--- a/styles.scss
+++ b/styles.scss
@@ -390,7 +390,7 @@ footer {
     #about {
         justify-content: center;
 
-        img {
+        #imgContainer {
             display: none;
         }
 
