divTittle box shadow

--- a/styles.scss
+++ b/styles.scss
@@ -49,8 +49,6 @@ body {
     text-align: center;
     background-color: $color1;
     font-family: 'Kanit', sans-serif;
-
-
 }
 
 h2,
@@ -128,6 +126,12 @@ header {
 
     img {
         width: 96%;
+        box-shadow:
+            $color2 0px 30px 80px,
+            $color2 0px -10px 30px,
+            $color2 0px 3px 8px,
+            $color2 0px 10px 30px,
+            $color2 0px -3px 8px;
     }
 
     #presentation {
