--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ header nav div:hover a {
 }
 #divTitle img {
   width: 96%;
+  box-shadow: rgb(16, 233, 86) 0px 30px 80px, rgb(16, 233, 86) 0px -10px 30px, rgb(16, 233, 86) 0px 3px 8px, rgb(16, 233, 86) 0px 10px 30px, rgb(16, 233, 86) 0px -3px 8px;
 }
 #divTitle #presentation {
   position: absolute;
