divTitle box Shadow black

--- a/styles.scss
+++ b/styles.scss
@@ -127,11 +127,11 @@ header {
     img {
         width: 96%;
         box-shadow:
-            $color2 0px 30px 80px,
-            $color2 0px -10px 30px,
-            $color2 0px 3px 8px,
-            $color2 0px 10px 30px,
-            $color2 0px -3px 8px;
+            black 0px 30px 80px,
+            black 0px -10px 30px,
+            black 0px 3px 8px,
+            black 0px 10px 30px,
+            black 0px -3px 8px;
     }
 
     #presentation {
